# todolist-server

./: .env  .env.sample  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 09daef2aa5e3_init.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py
app/logs/: my_log_conf.py
app/routers/: auth.py  todo.py  user.py
