[tool.poetry]
name = "next-level-list-api-server"
version = "0.1.0"
description = ""
authors = ["Олег Халиков <o.halikov@ocas.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.104.1"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.4.2"
sqlalchemy = "^2.0.22"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.1.0"
fastapi-jwt-auth = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-script = "poetry run python3 -V"